--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
     min-height: 48px;
     color: $button-textcolor;
     border: 2px solid $border-color;
-    border-radius: 80px;
+    border-radius: 8px;
     outline: none;
     font-size: 1.25rem;
     font-weight: 900;
@@ -13,6 +13,7 @@
         min-width: 64px;
         min-height: 64px;
     }
+    transition: border-radius 0.5s;
 }
 
 .button:hover {
@@ -21,6 +22,7 @@
 
 .button:hover,
 .button:focus {
-    box-shadow: 4px 2px 5px $text-shadow-color;
-    border-color: $font-color;
+    /* box-shadow: 4px 2px 5px $text-shadow-color;
+    border-color: $font-color; */
+    border-radius: 80px;
 }
