--- a/scss/layout/_searchBar.scss
+++ b/scss/layout/_searchBar.scss
@@ -5,7 +5,8 @@
         display: flex;
         justify-content: space-between;
         border: 2px solid $border-color;
-        border-radius: 500px;
+        border-radius: 8px;
+        transition: border-radius 0.5s;
 
         .searchBar__text {
             flex-grow: 1;
@@ -23,24 +24,27 @@
             color: $fade-color;
         }
         
-        .searchBar__button {
-            border: none;
+        
+    }
+    .searchBar__button {
+        border: none;
 
-            i {
-                font-size: 1.7rem;
-            }
+        i {
+            font-size: 1.7rem;
         }
+    }
 
-        .searchBar__button:hover,
-        .searchBar__button:focus {
-            border: none;
-            box-shadow: none;
-            text-shadow: 4px 2px 5px $text-shadow-color;
-        }
+    .searchBar__button:hover,
+    .searchBar__button:focus {
+        /* border: none;
+        box-shadow: none;
+        text-shadow: 4px 2px 5px $text-shadow-color; */
+        border-radius: 80px;
+    }
 
-        .searchBar__form:focus-within,
-        .searchBar__form:hover {
-            box-shadow: 4px 2px 5px $text-shadow-color;
-        }
+    .searchBar__form:focus-within,
+    .searchBar__form:hover {
+        /* box-shadow: 4px 2px 5px $text-shadow-color; */
+        border-radius: 80px;
     }
 }
