--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
 $font-color: #fff;
-$background-color: /* rgba(11, 11, 17, 0.663) */ black;
+$background-color: rgba(11, 11, 17, 0.663);
 $fog-color: darkslategray;
 $night-color: rgba(2, 1, 58, 0.5);
 $mask-color: rgba(0, 0, 0, 0.1);
