update background styles with gradients; implement snow animation

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,7 +1,11 @@
 $font-color: #fff;
 $background-color: rgba(11, 11, 17, 0.663);
-$fog-color: darkslategray;
-$night-color: rgba(2, 1, 58, 0.5);
+$clear-sky-color-1: #3f87cf;
+$clear-sky-color-2: #4181b9;
+$clouds-color-1: #5d5da2;
+$clouds-color-2: #677ab6;
+$night-color-1: #2e4482;
+$night-color-2: #546bab;
 $mask-color: rgba(0, 0, 0, 0.1);
 $button-color: transparent;
 $border-color: lightgray;
