--- a/scss/themes/_backgrounds.scss
+++ b/scss/themes/_backgrounds.scss
@@ -1,24 +1,28 @@
 .rain {
-    background-color: $background-color;
-    background-image: url("../img/rain.jpg");
+    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    /* background-image: url("../img/rain.jpg"); */
 }
 
 .snow {
-    background-color: $background-color;
-    background-image: url("../img/snow.jpg");
+    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    /* background-image: url("../img/snow.jpg"); */
 }
 
 .night {
-    background-color: $night-color;
-    background-image: url("../img/night.jpg");
+    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    /* background-image: url("../img/night.jpg"); */
 }
 
 .fog {
-    background-color: $fog-color;
-    background-image: url("../img/fog.jpg");
+    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    /* background-image: url("../img/fog.jpg"); */
 }
 
 .clouds {
-    background-color: $background-color;
-    background-image: url("../img/clouds.jpg");
+    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    /* background-image: url("../img/clouds.jpg"); */
+}
+
+.clear {
+    background-image: linear-gradient($clear-sky-color-1, $clear-sky-color-2);
 }
