fixed animations, added rain background animation

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -4,8 +4,8 @@ $clear-sky-color-1: #3f87cf;
 $clear-sky-color-2: #4181b9;
 $clouds-color-1: #5d5da2;
 $clouds-color-2: #677ab6;
-$night-color-1: #2e4482;
-$night-color-2: #546bab;
+$night-color-1: #10182e;
+$night-color-2: #1f273f;
 $mask-color: rgba(0, 0, 0, 0.1);
 $button-color: transparent;
 $border-color: lightgray;
