--- a/scss/themes/_backgrounds.scss
+++ b/scss/themes/_backgrounds.scss
@@ -9,7 +9,7 @@
 }
 
 .night {
-    background-image: linear-gradient($clouds-color-1, $clouds-color-2);
+    background-image: linear-gradient($night-color-1, $night-color-2);
     /* background-image: url("../img/night.jpg"); */
 }
 
