refactor layout styles; adjust padding and header structure; implement star and sun animations

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,10 +27,27 @@ body {
     padding: 0.5rem;
 }
 
+header {
+    width: 100%;
+    max-width: 700px;
+    max-height: 200px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    color: $font-color;
+    background-color: $mask-color;
+    border: 1px solid $border-color;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    @include mqMaxWMinH(1024px, 650px) {
+        backdrop-filter: blur(3px);
+    }
+}
+
 main {
     width: 100%;
     max-width: 700px;
-    max-height: 1050px;
+    max-height: 800px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -38,7 +55,6 @@ main {
     background-color: $mask-color;
     border: 1px solid $border-color;
     border-radius: 10px;
-    box-shadow: 1px 1px 2.5px $shadow-color;
     backdrop-filter: blur(10px);
     @include mqMaxWMinH(1024px, 650px) {
         backdrop-filter: blur(3px);
