--- a/scss/layout/_currentForecast.scss
+++ b/scss/layout/_currentForecast.scss
@@ -3,6 +3,7 @@
         font-size: 1rem;
         font-weight: normal;
         text-align: center;
+        padding-top: 0.5rem;
         margin-bottom: 1rem;
         @include mq(768px) {
             font-size: 1.3rem;
