--- a/scss/layout/_navButtons.scss
+++ b/scss/layout/_navButtons.scss
@@ -1,5 +1,5 @@
 .navButtons {
     @include flexCenter;
     justify-content: space-evenly;
-    padding: 0.25rem 0.25rem 1rem 0.25rem;
+    padding: 0 0.25rem 0.5rem 0.25rem;
 }
